# bananaGen

./: .env.example  .flake8  .gitignore  Implementation Plan  README.md  banana_slides.sql  deleted_files.txt  docker-compose.yml  edu_qa_case_fix.html  edu_qa_case_premium.html  edu_qa_case_preview.html  edu_qa_case_ultimate.html  package.json  pyproject.toml  requirements.txt  status.txt  启动文档.txt
.githooks/: pre-commit
.github/workflows/: pr-quick-check.yml
backend/: Dockerfile  README.md  add_render_mode.sql  alembic.ini  app.py  app_fastapi.py  config.py  config_fastapi.py  config_rate_limits.py  deps.py  run.bat  run.sh  test_qa.py  update_settings.py
backend/api/: middleware.py
backend/controllers/: __init__.py  file_controller.py  html_renderer_controller.py  material_controller.py  page_controller.py  preset_style_controller.py  project_controller.py  render_controller.py  settings_controller.py  template_controller.py
backend/features/: __init__.py
backend/migrations/: add_render_mode_to_projects.sql  env.py
backend/models/: __init__.py  material.py  page.py  preset_style.py  project.py  reference_file.py  settings.py  smart_ppt_log.py  task.py  template.py  user_template.py
backend/schemas/: __init__.py  common.py  outline.py  (+5 more)
frontend/: .npmrc  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
scripts/: ab_test_background_6_schemes.py  ab_test_html_image_prompt.py  export_editable_pptx.py  refactor_description_task.py  run-local-ci.sh  setup-env-from-secrets.sh  setup_git_hooks.sh
(+452 files in other folders)
